[package]
name = "ceno-sum-rayon-test"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10"
either = "1.15.0"
itertools = "0.14.0"
rand = "0.8"

# this branch will lock
ff_ext = { git = "https://github.com/Lagrange-Labs/ceno", branch = "fvs-split-ceno-codebase-fixes" }
multilinear_extensions = { git = "https://github.com/Lagrange-Labs/ceno", branch = "fvs-split-ceno-codebase-fixes" }
p3 = { git = "https://github.com/Lagrange-Labs/ceno", branch = "fvs-split-ceno-codebase-fixes" }
sumcheck = { git = "https://github.com/Lagrange-Labs/ceno", branch = "fvs-split-ceno-codebase-fixes" }
transcript = { git = "https://github.com/Lagrange-Labs/ceno", branch = "fvs-split-ceno-codebase-fixes" }

tracing-profile = { version = "0.10.9", features = ["perfetto"] }
tracing = "0.1.41"
